--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -29,7 +29,7 @@
                 <td>{{cat.selection}}</td>
                 <td>{{cat.vein}}</td>
                 <!--<td>{{cat.offeror}}</td>-->
-                <td><a href="#/Caterer/{{cat._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="#/caterer/{{cat._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
                 <td><a href="" ng-click="deleteCat(cat)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
@@ -39,4 +39,4 @@
 <!--<ul>
     <li ng-repeat = "Cat in caterer">{{cat.kitchen}}</li>
 </ul>-->
-<a href = "#/Caterer/new" class = "btn btn-default">Add new Caterer</a>
+<a href = "#/caterer/new" class = "btn btn-default">Add new Caterer</a>
