fixed location referencing added logo

--- a/public/app/templates/Location/list.html
+++ b/public/app/templates/Location/list.html
@@ -31,5 +31,5 @@
             </tbody>
         </table>
     </div>
-    <a href = "#/Location/new" class = "btn btn-default">Add new Location</a>
+    <a href = "#/location/new" class = "btn btn-default">Add new Location</a>
 </div>
