--- a/public/app/templates/Directives/navigation.html
+++ b/public/app/templates/Directives/navigation.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="" alt="LOGO"></a>
+            <a class="navbar-brand" href="#"><h4>EvenTUM</h4><img src=""></a>
         </div>
         <nav id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right" ng-hide="isLoggedin">
