create Event added. Route fix in create Offetr

--- a/public/app/templates/Location/list.html
+++ b/public/app/templates/Location/list.html
@@ -25,11 +25,11 @@
                 <td>{{Loc.address}}</td>
                 <td>{{Loc.capacity}}</td>
                 <td>{{Loc.price}}</td>
-                <td><a href="#/Location/{{Loc._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
+                <td><a href="#/location/{{Loc._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
                 <td><a href="" ng-click="deleteLoc(Loc)" class="btn btn-danger btn-sm">Delete</a></td>
             </tr>
             </tbody>
         </table>
     </div>
-    <a href = "#/Location/new" class = "btn btn-default">Add new Location</a>
+    <a href = "#/location/new" class = "btn btn-default">Add new Location</a>
 </div>
