--- a/public/app/templates/event/event-edit.html
+++ b/public/app/templates/event/event-edit.html
@@ -39,14 +39,14 @@
             <label for="location">Location</label>
             <select id="location" ng-model="event.location">
                 <option value="no selected" ng-selected="!exist">select a location</option>
-                <option ng-value="loc._id" ng-repeat="loc in locations">{{loc.name}}</option>
+                <option ng-value="loc._id" ng-repeat="loc in locations" ng-selected="event.location === loc._id">{{loc.name}}</option>
             </select>
         </div>
         <div class="form-group">
             <label for="caterer">Caterer</label>
             <select id="caterer" ng-model="event.caterer">
                 <option value="no selected" ng-selected="!exist">select a caterer</option>
-                <option ng-value="cat._id" ng-repeat="cat in caterer">{{cat.name}}</option>
+                <option ng-value="cat._id" ng-repeat="cat in caterers" ng-selected="event.caterer === cat._id">{{cat.name}}</option>
             </select>
         </div>
 
