--- a/public/app/templates/event/event-detail.html
+++ b/public/app/templates/event/event-detail.html
@@ -112,7 +112,35 @@
                 </div>
                 <button class="btn btn-secondary" ng-click="addInvitee()">add one</button>
             </div>
-            <div class="col-md-7"></div>
+            <div class="col-md-7">
+                <form>
+                    <div class="form-group">
+                        <label for="template">Template:</label>
+                        <select id="template" >
+                            <option>T1</option>
+                            <option>T2</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="salutation">Salutation:</label>
+                        <select id="salutation" >
+                            <option>Dear</option>
+                            <option>Hi</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Your message:</label>
+                        <textarea type="text"
+                               id="message"
+                               placeholder="Your message"
+                               ng-model="event.name"
+                               required></textarea>
+                    </div>
+                </form>
+
+
+                <!-- select Template, select Anrede, Message (in der Höhe verändern) -->
+            </div>
         </form>
     </div>
 </div>
