--- a/public/app/templates/Caterer/form.html
+++ b/public/app/templates/Caterer/form.html
@@ -8,9 +8,9 @@
 <div class="control-group">
     <label class="control-label" for="pic">Pic</label>
     <div class="controls">
-        Make sure your image is in 16:9 format. <br>
-        The object should fill the whole picture.
-        <p></p>
+
+        <p>Make sure your image is in 16:9 format.</p>
+        <p>The object should fill the whole picture.</p>
         <input id="pic" name="pic" type="file" accept="image/*" onchange="loadFile(event)" ng.model="cat.pic">
         <img height=100px width=150px id="output"/>
         <script>
