--- a/public/app/templates/Caterer/edit.html
+++ b/public/app/templates/Caterer/edit.html
@@ -10,6 +10,7 @@
                        class="form-control"
                        id="name"
                        placeholder="Name"
+                       ng-model="cat.name"
                        required>
             </div>
             <div class="control-group">
@@ -18,6 +19,7 @@
                           class="form-control"
                           id="description"
                           placeholder="Description"
+                          ng-model="cat.description"
                           required></textarea>
             </div>
             <div class="control-group">
@@ -26,47 +28,67 @@
                        class="form-control"
                        id="address"
                        placeholder="Address"
+                       ng-model="cat.address"
                        required>
             </div>
         </div>
         <div class="col-md-6">
 
             <div class="row">
-                <div class="col-sm-6">
-                    <div class="control-group">
-                        <label for="capacity" class="control-label">Capacity</label>
-                        <input type="number"
-                               class="form-control"
-                               id="capacity"
-                               placeholder="Capacity"
-                               required>
-                    </div>
-                </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <div class="control-group">
                         <label for="price" class="control-label">Price</label>
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="number"
-                                       class="form-control"
-                                       id="price"
-                                       placeholder="Price"
-                                       required>
+                                <div class="input-group">
+                                    <input type="number"
+                                           class="form-control"
+                                           id="price"
+                                           placeholder="Price"
+                                           ng-model="cat.price"
+                                           required>
+                                    <span class="input-group-addon">€</span>
+                                </div>
                             </div>
                             <div class="col-sm-6">
-                                <select name="selectPrice" id="selectPrice" class="form-control">
-                                    <option value="person">Price / person</option>
-                                    <option value="event" selected>Price / event</option>
+                                <select name="priceType" id="priceType" class="form-control" ng-model="cat.priceType">
+                                    <option value="person" ng-selected=" selected || cat.priceType === 'person' ">Price / person</option>
+                                    <option value="event" ng-selected=" cat.priceType === 'event' ">Price / event</option>
                                 </select>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
-
+            <div class="control-group">
+                <label for="kitchen" class="control-label">Kitchen</label>
+                <input type="text"
+                       class="form-control"
+                       id="kitchen"
+                       placeholder="Kitchen"
+                       ng-model="cat.kitchen"
+                       required>
+            </div>
+            <div class="control-group">
+                <label for="selection" class="control-label">Selection</label>
+                <input type="text"
+                       class="form-control"
+                       id="selection"
+                       placeholder="Selection"
+                       ng-model="cat.selection"
+                       required>
+            </div>
+            <div class="control-group">
+                <label for="vein" class="control-label">Vein</label>
+                <input type="text"
+                       class="form-control"
+                       id="vein"
+                       placeholder="Vein"
+                       ng-model="cat.vein"
+                       required>
+            </div>
         </div>
+        <button class ="btn btn-success" type="submit" ng-click="save()">Submit</button>
     </div>
 </div>
 
