--- a/public/app/templates/Caterer/list.html
+++ b/public/app/templates/Caterer/list.html
@@ -1,42 +1,35 @@
-<div class="starter-template">
-    <h1>Caterer</h1>
-    <p class="lead">{{message}}.</p>
-</div>
+<div class="container">
+    <h2>Caterer <a href = "#/caterer/new" class = "btn btn-success pull-right">Add new Caterer</a></h2>
 
-<div class = "row">
-    <div class = "col-md-12">
-        <table class = "table table-hover table-striped">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Picture</th>
-                <th>Description</th>
-                <th>Price per Person</th>
-                <th>Kitchen</th>
-                <th>Selection</th>
-                <th>Vein</th>
-               <!-- <th>Offeror</th>-->
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="cat in Caterer">
-                <td>{{cat.name}}</td>
-                <td>{{cat.pic}}</td>
-                <td>{{cat.description}}</td>
-                <td>{{cat.pricePerPerson}}</td>
-                <td>{{cat.kitchen}}</td>
-                <td>{{cat.selection}}</td>
-                <td>{{cat.vein}}</td>
-                <!--<td>{{cat.offeror}}</td>-->
-                <td><a href="#/caterer/{{cat._id}}/edit" class="btn btn-default btn-sm">Edit</a></td>
-                <td><a href="" ng-click="deleteCat(cat)" class="btn btn-danger btn-sm">Delete</a></td>
-            </tr>
-            </tbody>
-        </table>
+    <div class = "row">
+        <div class = "col-md-12">
+            <table class = "table table-hover table-striped">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th>Kitchen</th>
+                    <th>Selection</th>
+                    <th>Vein</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="cat in caterer">
+                    <td>{{cat.name}}</td>
+                    <td>{{cat.description}}</td>
+                    <td>{{cat.price}}€ per {{cat.priceType}}</td>
+                    <td>{{cat.kitchen}}</td>
+                    <td>{{cat.selection}}</td>
+                    <td>{{cat.vein}}</td>
+                    <td>
+                        <a href="#/caterer/{{cat._id}}/edit" class="btn btn-default btn-sm">Edit</a>
+                        <a ng-click="deleteCat(cat._id)" role="button" class="btn btn-danger btn-sm">Delete</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
-<!--<ul>
-    <li ng-repeat = "Cat in caterer">{{cat.kitchen}}</li>
-</ul>-->
-<a href = "#/caterer/new" class = "btn btn-default">Add new Caterer</a>
