--- a/public/app/templates/Invitation/edit.html
+++ b/public/app/templates/Invitation/edit.html
@@ -6,3 +6,42 @@
 
     </fieldset>
 </form>
+
+
+<div class="container" >
+    <header>
+        <h3>Create Invitation Template</h3>
+    </header>
+    <div class="row">
+
+            <div class="control-group">
+                <label for="name" class="control-label">Name</label>
+                <input type="text"
+                       class="form-control"
+                       id="name"
+                       placeholder="Name"
+                       ng-model="inv.name"
+                       required>
+            </div>
+            <div class="control-group">
+                <label for="description" class="control-label">Description</label>
+                <textarea type="text"
+                          class="form-control"
+                          id="description"
+                          placeholder="Description"
+                          ng-model="inv.description"
+                          required></textarea>
+            </div>
+            <div class="control-group">
+                <label for="price" class="control-label">Price per person</label>
+                    <input type="number"
+                           class="form-control"
+                           id="price"
+                           placeholder="Price"
+                           ng-model="inv.price"
+                           required>
+            </div>
+        <div class="row"><button class ="btn btn-success" type="submit" ng-click="save()" >Submit</button></div>
+
+    </div>
+</div>
