--- a/public/app/templates/Invitation/list.html
+++ b/public/app/templates/Invitation/list.html
@@ -1,6 +1,6 @@
 <div class="starter-template">
     <h1>Invitation</h1>
-    <p class="lead">{{message}}.</p>
+    <p class="lead">{{message}}</p>
 </div>
 
 <div class = "row">
