added map to createevent

--- a/public/app/templates/event/event-edit.html
+++ b/public/app/templates/event/event-edit.html
@@ -52,4 +52,6 @@
 
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
+
+    <div id="map" style="width: 800px; height: 480px;"></div>
 </div>
