--- a/public/app/templates/event/event-edit.html
+++ b/public/app/templates/event/event-edit.html
@@ -50,7 +50,7 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button href='/event/edit/:id' type="submit" class="btn btn-success">Submit</button>
     </form>
 
     <div id="map" style="width: 800px; height: 480px;"></div>
