--- a/public/app/templates/Directives/navigation.html
+++ b/public/app/templates/Directives/navigation.html
@@ -7,7 +7,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><h4>EvenTUM</h4><img src=""></a>
+            <a class="navbar-brand" href="#"><h5>Startpage</h5><img src=""></a>
+            <a ng-show="isLoggedin" class="navbar-brand" href="#/offer"><h5>Offer</h5><img src=""></a>
+            <a ng-show="isLoggedin" class="navbar-brand" href="#/event"><h5>Event</h5><img src=""></a>
+
         </div>
         <nav id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right" ng-hide="isLoggedin">
